--- a/pages/videos/index.wxss
+++ b/pages/videos/index.wxss
@@ -18,7 +18,7 @@
   height: 345rpx;
 }
 
-.play {
+.playing {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -32,7 +32,7 @@
   border-radius: 0;
 }
 
-.play image {
+.playing image {
   width: 136rpx;
   height: 136rpx;
   border: none !important;
