--- a/pages/coursedetail/index.wxss
+++ b/pages/coursedetail/index.wxss
@@ -8,7 +8,7 @@
 
 video {
   width: 100%;
-  height: 420rpx;
+  height: 400rpx;
   display: inline-block;
   line-height: 0;
   overflow: hidden;
@@ -76,14 +76,20 @@ video {
 .vo-name {
   float: left;
   margin-top: 30rpx;
+  width: 65%;
+  text-overflow: ellipsis;
+white-space:nowrap;
+overflow:hidden;
 }
 
 .vo-lock {
+  width: 35%;
   font-size: 24rpx;
   color: #d1141b;
   line-height: 45rpx;
   float: right;
   margin-top: 30rpx;
+  overflow: hidden;
 }
 
 .vo-foot {
@@ -113,4 +119,7 @@ video {
   background: #d1141b;
   width: 220rpx;
   font-weight: 600;
+}
+.active{
+  color: #d1141b;
 }
