--- a/pages/videos/index.wxss
+++ b/pages/videos/index.wxss
@@ -4,13 +4,14 @@
   background: #efeef3;
   width: 100%;
   height: 100vh;
-
+  overflow-x: hidden;
 }
 
 .sp {
   padding: 15rpx 30rpx;
   background: #fff;
   margin-top: 10rpx;
+  overflow: hidden;
 }
 
 .sp .video, .sp .img {
