--- a/pages/mine/index.wxml
+++ b/pages/mine/index.wxml
@@ -8,7 +8,7 @@
   <view >
 
    <view wx:if="{{phone}}" class="bind">绑定手机号：{{phone}}</view>
-  <navigator wx:else url="/pages/bindPhone/index" class="bind">绑定手机号，送牛股指标</navigator>
+  <navigator wx:else url="/pages/bindPhone/index" class="bind">点击去绑定手机号</navigator>
    </view>
   <!-- fast-nav -->
   <view class="fast-nav">
