--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -1,26 +1,26 @@
 <!--pages/order/index.wxml-->
-<view class="order-list">
+<scroll-view scroll-y="true" class="order-list" scroll-top="{{scrollTop}}" bindscrolltolower="getScroll"    lower-threshold="100" bindscrolltoupper="upper" bindscroll="scroll" upper-threshold="200" scroll-with-animation="true">
   <view class="order" wx:for="{{orderList}}" wx:key="index">
     <view class="or-tit">
-      <text class="type" wx:if="{{item.type==1}}">研报</text>
-      <text class="type" wx:elif="{{item.type==2}}">课程</text>
-      <text class='time'>{{item.time}}</text>
+      <text class="type">{{item.type_name}}</text>
+      <text class='time'>{{item.timestamp}}</text>
     </view>
-    <view class="or-cont" wx:if="{{item.type==1}}">
-      {{item.name}}
+    <view class="or-cont" wx:if="{{item.type==2}}">
+      {{item.title}}
     </view>
-    <view class="or-cont" wx:elif="{{item.type==2}}">
+    <view class="or-cont" wx:elif="{{item.type==1}}">
       <view class="img">
-        <image src="{{item.img}}"></image>
+        <image src="{{getDomain}}{{item.cover}}"></image>
       </view>
       <view class="or-name">
-        <view class="name">{{item.name}}</view>
-        <view class="course">{{item.course}}</view>
+        <view class="name">{{item.title}}</view>
+        <view class="course">{{item.num}}课时</view>
       </view>
     </view>
     <view class="or-foot">
-      <text class="left">价格：<text class="or-red">￥{{item.price}}</text></text>
-      <text class="right">有效期：<text class="or-red">{{item.effective}}</text></text>
+      <text class="left">价格：<text class="or-red">￥{{item.money}}</text></text>
+      <text class="right">有效期：<text class="or-red">永久有效</text></text>
     </view>
   </view>
-</view><!-- order-list end-->
+</scroll-view><!-- order-list end-->
+<loading hidden="{{hiddenLoading}}">{{loadingTip}}</loading>
