--- a/pages/videos/index.wxml
+++ b/pages/videos/index.wxml
@@ -1,20 +1,25 @@
 <!--pages/videos/index.wxml-->
-
+<view class="videos">
+<loading hidden="{{hiddenLoading}}">{{loadingTip}}</loading>
+<view>
 <scroll-view scroll-y="true" class="sp-list" scroll-top="{{scrollTop}}" bindscrolltolower="getScroll"    lower-threshold="100" bindscrolltoupper="upper" bindscroll="scroll" upper-threshold="200" scroll-with-animation="true">
     <view class="sp" wx:for="{{videoList}}" wx:key="index">
       <view class='sp-tit'>{{item.title}}</view>
-      <video id="video-{{index}}" class="video" src="{{item.content}}" controls binderror="videoErrorCallback">
-        <cover-view wx:if='{{ index != playIndex}}'>
-          <cover-image class="img" src="{{getDomain}}{{item.cover}}" />
-          <cover-view class="playing">
-            <cover-image data-videoid="video-{{index}}" data-vid="{{item.id}}" bindtap='PlayVoid' src="../../images/play.png"/>
-          </cover-view>
-        </cover-view>
+      <video wx:if='{{ index == playIndex}}' id="video-{{index}}" class="video" src="{{item.content}}" controls binderror="videoErrorCallback">
       </video>
+      <view wx:if='{{ index != playIndex}}'>
+          <image class="img" src="{{getDomain}}{{item.cover}}" ></image>
+          <view class="playing">
+            <image data-videoid="video-{{index}}" data-vid="{{item.id}}" bindtap='PlayVoid' src="../../images/play.png" ></image>
+          </view>
+        </view>
       <view class="sp-time">
         <text class="time">{{item.time_stamp}}</text>
          <text class="frequency">播放次数{{item.click}}次</text>
       </view>
     </view>
 </scroll-view>
-<loading hidden="{{hiddenLoading}}">{{loadingTip}}</loading>
+</view>
+
+
+</view>
