--- a/pages/downApp/index.wxss
+++ b/pages/downApp/index.wxss
@@ -1,1 +1,53 @@
 /* pages/downApp/index.wxss */
+
+.down-app{
+  
+}
+.step{
+  font-size: 30rpx;
+  color: #333;
+  text-align: left;
+  padding: 0 30rpx;
+}
+.step1{
+  margin-top: 70rpx;
+}
+.hand{
+  width: 80rpx;
+  height: 110rpx;
+  display: block;
+  margin:40rpx auto;
+  -webkit-animation-name: scaleDraw; 
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 3s;
+
+}
+.erweima{
+  display: block;
+  margin: 10rpx auto 30rpx;
+  width: 400rpx;
+  height: 400rpx;
+}
+.step2{
+  font-size: 30rpx;
+  color: #1C1C1C;
+  text-align: justify;
+  line-height: 54rpx;
+  margin: 50rpx auto;
+}
+
+@keyframes scaleDraw {  /*定义关键帧、scaleDrew是需要绑定到选择器的关键帧名称*/
+            0%{
+                transform: scale(1);  /*开始为原始大小*/
+            }
+            25%{
+                transform: scale(1.1); /*放大1.1倍*/
+            }
+            50%{
+                transform: scale(1);
+            }
+            75%{
+                transform: scale(1.1);
+            }
+        }
