--- a/pages/us/us.wxml
+++ b/pages/us/us.wxml
@@ -1,4 +1,4 @@
 <!--us.wxml-->
 <view class="main">
-  <web-view src="http://app.ngjjtg.com/index/about/index"></web-view>
+  <web-view src="https://app.ngjjtg.com/index/about/index"></web-view>
 </view>
