--- a/pages/videos/index.wxss
+++ b/pages/videos/index.wxss
@@ -1,10 +1,11 @@
 /* pages/videos/index.wxss */
+vides{
 
+}
 .sp-list {
   background: #efeef3;
-  width: 100%;
+
   height: 100vh;
-  overflow-x: hidden;
 }
 
 .sp {
@@ -12,13 +13,24 @@
   background: #fff;
   margin-top: 10rpx;
   overflow: hidden;
+  position: relative;
+  height: 410rpx;
+  width: 690rpx;
 }
 
 .sp .video, .sp .img {
-  width: 100%;
+  width: 690rpx;
   height: 345rpx;
+  position: absolute;
+  overflow: hidden;
 }
-
+.sp .video{
+  z-index: 222!important;
+  float:left;
+}
+.sp .img{
+  z-index: 999!important;
+}
 .playing {
   position: absolute;
   left: 50%;
@@ -31,6 +43,7 @@
   background: rgba(0, 0, 0, 0);
   border: none !important;
   border-radius: 0;
+  z-index: 1000!important;
 }
 
 .playing image {
