--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,15 +1,15 @@
 /**index.wxss**/
 .main{
-  /* height: 100vh; */
+  height: 100vh;
 }
 
 .swiper {
-  height: 300rpx;
+  height: 380rpx;
 }
 
 .swiper image {
   width: 100%;
-  height: 300rpx;
+  height: 380rpx;
 }
 
 .navs { 
@@ -74,10 +74,12 @@
 }
 .sp{
   /* padding: 30rpx 0; */
+  position: relative;
 }
 .sp .video,.sp .img{
   width: 100%;
   height: 345rpx;
+  z-index: 1000;
 }
 .playing{
   position: absolute;
