--- a/pages/videos/index.wxml
+++ b/pages/videos/index.wxml
@@ -1,25 +1,25 @@
-<!--pages/videos/index.wxml-->
+<!--index.wxml-->
 <view class="videos">
-<loading hidden="{{hiddenLoading}}">{{loadingTip}}</loading>
-<view>
-<scroll-view scroll-y="true" class="sp-list" scroll-top="{{scrollTop}}" bindscrolltolower="getScroll"    lower-threshold="100" bindscrolltoupper="upper" bindscroll="scroll" upper-threshold="200" scroll-with-animation="true">
-    <view class="sp" wx:for="{{videoList}}" wx:key="index">
+  <loading hidden="{{hiddenLoading}}">{{loadingTip}}</loading>
+  <scroll-view class="sp-list" scroll-y="true" class="sp-list" scroll-top="{{scrollTop}}" bindscrolltolower="getScroll"  bindscroll="scroll" upper-threshold="200" scroll-with-animation="true">
+    <view class="video-box" wx:for="{{videoList}}" wx:key="unique">
       <view class='sp-tit'>{{item.title}}</view>
-      <video wx:if='{{ index == playIndex}}' id="video-{{index}}" class="video" src="{{item.content}}" controls binderror="videoErrorCallback">
-      </video>
-      <view wx:if='{{ index != playIndex}}'>
-          <image class="img" src="{{getDomain}}{{item.cover}}" ></image>
-          <view class="playing">
-            <image data-videoid="video-{{index}}" data-vid="{{item.id}}" bindtap='PlayVoid' src="../../images/play.png" ></image>
+      <view class="video-container">
+        <view class="video" data-id="{{item.id}}"  bindtap="videoPlay">
+          <video wx:if="{{curr_id == item.id}}" id="myVideo" id="myVideo" src="{{item.content}}" poster="{{getDomain}}{{item.cover}}" objectFit="cover" controls></video>
+          <view wx:else>
+            <image class="model-img" mode="aspectFill" src="{{getDomain}}{{item.cover}}"></image>
+            <view class="model-btn">
+              <view class="play-icon"></view>
+            </view>
           </view>
         </view>
+      </view>
       <view class="sp-time">
         <text class="time">{{item.time_stamp}}</text>
-         <text class="frequency">播放次数{{item.click}}次</text>
+        <text class="frequency">播放次数{{item.click}}次</text>
       </view>
     </view>
-</scroll-view>
-</view>
-
+  </scroll-view>
 
 </view>
